--- a/src/App.module.css
+++ b/src/App.module.css
@@ -57,6 +57,8 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  z-index: -1;
+  overflow: auto;
 }
 
 .App__messages div {
