--- a/src/App.module.css
+++ b/src/App.module.css
@@ -56,8 +56,6 @@
   padding: 20px 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  z-index: -1;
   overflow: auto;
 }
 
@@ -77,4 +75,21 @@
   align-self: flex-end;
   border-radius: 10px 10px 0 10px;
   background-color: #f9e4cb;
+}
+
+/* Webkit browsers */
+.App__messages::-webkit-scrollbar {
+  width: 5px;
+  background-color: transparent;
+}
+
+/* Webkit browsers */
+.App__messages::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 10px;
+}
+
+/* Webkit browsers */
+.App__messages::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
 }
